Fixed sizing of profile photo on about page, updated profile photo, added stack overflow link

--- a/public/styles.css
+++ b/public/styles.css
@@ -198,14 +198,23 @@ body {
 
 .profile-image-wrapper {
     width: 100%;
-    height: 80%;
     padding: 1vh 1vh 1vh 2vh;
-    display: table;
+    display: flex;
+    flex-direction: row;
 }
 
-.profile-image-wrapper img {
-    display: table-cell;
+.profile-image-headshot {
+    height: 100%;
     width: 100%;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.profile-image-headshot img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
@@ -254,7 +263,7 @@ body {
 }
 
 .card i {
-    width: 3vh;
+    width: max(4vh, 2vw, 10px);
 }
 
 .title {
